--- a/wvc/256x256/NLM_GPU_GIF_Cuda.ipynb
+++ b/wvc/256x256/NLM_GPU_GIF_Cuda.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 15,
    "id": "d3f2c4de",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
     "import time\n",
     "\n",
     "# Função para replicar bordas (mirror padding)\n",
-    "@njit\n",
+    "#@njit\n",
     "def mirror(A, f):\n",
     "    n, m = A.shape\n",
     "    nlin = n + 2 * f\n",
@@ -127,8 +127,8 @@
     "        grid, threads_per_block,\n",
     "        (\n",
     "            padded.ravel(), output.ravel(),\n",
-    "            cp.int32(m), cp.int32(n), cp.int32(f), cp.int32(t),\n",
-    "            cp.float32(h), cp.int32(padded.shape[1])\n",
+    "            cp.int32(m).get(), cp.int32(n).get(), cp.int32(f).get(), cp.int32(t).get(),\n",
+    "            cp.float32(h).get(), cp.int32(padded.shape[1]).get()\n",
     "        ),\n",
     "        shared_mem=shared_mem_size\n",
     "    )\n",
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 5,
    "id": "013970da",
    "metadata": {},
    "outputs": [],
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 6,
    "id": "a0acf26e",
    "metadata": {},
    "outputs": [],
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 16,
    "id": "4b22703e",
    "metadata": {},
    "outputs": [
@@ -230,23 +230,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class 'cupy.ndarray'>\n",
-      "Sigma estimado: 12.423446458114093\n",
-      "h_nlm: 12.989459574643758\n"
+      "Sigma estimado: 12.463414387802912\n",
+      "h_nlm: 12.989709078310172\n"
      ]
     },
     {
-     "ename": "TypingError",
-     "evalue": "Failed in nopython mode pipeline (step: nopython frontend)\n\u001b[1m\u001b[1mUnknown attribute 'zeros' of type Module(<module 'cupy' from '/opt/conda/lib/python3.10/site-packages/cupy/__init__.py'>)\n\u001b[1m\nFile \"../../../../tmp/ipykernel_13130/2226032149.py\", line 12:\u001b[0m\n\u001b[1m<source missing, REPL/exec in use?>\u001b[0m\n\u001b[0m\n\u001b[0m\u001b[1mDuring: typing of get attribute at /tmp/ipykernel_13130/2226032149.py (12)\u001b[0m\n\u001b[1m\nFile \"../../../../tmp/ipykernel_13130/2226032149.py\", line 12:\u001b[0m\n\u001b[1m<source missing, REPL/exec in use?>\u001b[0m\n",
+     "ename": "AttributeError",
+     "evalue": "'numpy.int32' object has no attribute 'get'",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypingError\u001b[0m                               Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[37], line 53\u001b[0m\n\u001b[1;32m     51\u001b[0m \u001b[38;5;66;03m# Rodar GPU\u001b[39;00m\n\u001b[1;32m     52\u001b[0m start_gpu \u001b[38;5;241m=\u001b[39m time\u001b[38;5;241m.\u001b[39mtime()\n\u001b[0;32m---> 53\u001b[0m result_gpu \u001b[38;5;241m=\u001b[39m \u001b[43mNLM_fast_cuda_shared\u001b[49m\u001b[43m(\u001b[49m\u001b[43mnoised_poisson_cp\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mh_nlm\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mf\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mt\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     54\u001b[0m result_gpu_cp \u001b[38;5;241m=\u001b[39m cp\u001b[38;5;241m.\u001b[39masnumpy(result_gpu)\n\u001b[1;32m     55\u001b[0m cp\u001b[38;5;241m.\u001b[39mcuda\u001b[38;5;241m.\u001b[39mStream\u001b[38;5;241m.\u001b[39mnull\u001b[38;5;241m.\u001b[39msynchronize()  \u001b[38;5;66;03m# Espera GPU terminar\u001b[39;00m\n",
-      "Cell \u001b[0;32mIn[34], line 99\u001b[0m, in \u001b[0;36mNLM_fast_cuda_shared\u001b[0;34m(img, h, f, t)\u001b[0m\n\u001b[1;32m     97\u001b[0m img \u001b[38;5;241m=\u001b[39m img\u001b[38;5;241m.\u001b[39mastype(cp\u001b[38;5;241m.\u001b[39mfloat32)\n\u001b[1;32m     98\u001b[0m m, n \u001b[38;5;241m=\u001b[39m img\u001b[38;5;241m.\u001b[39mshape\n\u001b[0;32m---> 99\u001b[0m padded \u001b[38;5;241m=\u001b[39m \u001b[43mmirror\u001b[49m\u001b[43m(\u001b[49m\u001b[43mimg\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mf\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    101\u001b[0m kernel_code \u001b[38;5;241m=\u001b[39m nlm_kernel_shared_code\u001b[38;5;241m.\u001b[39mencode(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mascii\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mignore\u001b[39m\u001b[38;5;124m'\u001b[39m)\u001b[38;5;241m.\u001b[39mdecode(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mascii\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m    102\u001b[0m module \u001b[38;5;241m=\u001b[39m cp\u001b[38;5;241m.\u001b[39mRawModule(code\u001b[38;5;241m=\u001b[39mkernel_code, options\u001b[38;5;241m=\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m-std=c++11\u001b[39m\u001b[38;5;124m'\u001b[39m,))\n",
-      "File \u001b[0;32m/opt/conda/lib/python3.10/site-packages/numba/core/dispatcher.py:423\u001b[0m, in \u001b[0;36m_DispatcherBase._compile_for_args\u001b[0;34m(self, *args, **kws)\u001b[0m\n\u001b[1;32m    419\u001b[0m         msg \u001b[38;5;241m=\u001b[39m (\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mstr\u001b[39m(e)\u001b[38;5;241m.\u001b[39mrstrip()\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m \u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124mThis error may have been caused \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    420\u001b[0m                \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mby the following argument(s):\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;132;01m{\u001b[39;00margs_str\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m    421\u001b[0m         e\u001b[38;5;241m.\u001b[39mpatch_message(msg)\n\u001b[0;32m--> 423\u001b[0m     \u001b[43merror_rewrite\u001b[49m\u001b[43m(\u001b[49m\u001b[43me\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mtyping\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m    424\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m errors\u001b[38;5;241m.\u001b[39mUnsupportedError \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[1;32m    425\u001b[0m     \u001b[38;5;66;03m# Something unsupported is present in the user code, add help info\u001b[39;00m\n\u001b[1;32m    426\u001b[0m     error_rewrite(e, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124munsupported_error\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
-      "File \u001b[0;32m/opt/conda/lib/python3.10/site-packages/numba/core/dispatcher.py:364\u001b[0m, in \u001b[0;36m_DispatcherBase._compile_for_args.<locals>.error_rewrite\u001b[0;34m(e, issue_type)\u001b[0m\n\u001b[1;32m    362\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m e\n\u001b[1;32m    363\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m--> 364\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m e\u001b[38;5;241m.\u001b[39mwith_traceback(\u001b[38;5;28;01mNone\u001b[39;00m)\n",
-      "\u001b[0;31mTypingError\u001b[0m: Failed in nopython mode pipeline (step: nopython frontend)\n\u001b[1m\u001b[1mUnknown attribute 'zeros' of type Module(<module 'cupy' from '/opt/conda/lib/python3.10/site-packages/cupy/__init__.py'>)\n\u001b[1m\nFile \"../../../../tmp/ipykernel_13130/2226032149.py\", line 12:\u001b[0m\n\u001b[1m<source missing, REPL/exec in use?>\u001b[0m\n\u001b[0m\n\u001b[0m\u001b[1mDuring: typing of get attribute at /tmp/ipykernel_13130/2226032149.py (12)\u001b[0m\n\u001b[1m\nFile \"../../../../tmp/ipykernel_13130/2226032149.py\", line 12:\u001b[0m\n\u001b[1m<source missing, REPL/exec in use?>\u001b[0m\n"
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[16], line 67\u001b[0m\n\u001b[1;32m     65\u001b[0m \u001b[38;5;66;03m# Rodar GPU\u001b[39;00m\n\u001b[1;32m     66\u001b[0m start_gpu \u001b[38;5;241m=\u001b[39m time\u001b[38;5;241m.\u001b[39mtime()\n\u001b[0;32m---> 67\u001b[0m result_gpu \u001b[38;5;241m=\u001b[39m \u001b[43mNLM_fast_cuda_shared\u001b[49m\u001b[43m(\u001b[49m\u001b[43mruidosa\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mh_nlm\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mf\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mt\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     68\u001b[0m result_gpu_cp \u001b[38;5;241m=\u001b[39m cp\u001b[38;5;241m.\u001b[39masnumpy(result_gpu)\n\u001b[1;32m     69\u001b[0m cp\u001b[38;5;241m.\u001b[39mcuda\u001b[38;5;241m.\u001b[39mStream\u001b[38;5;241m.\u001b[39mnull\u001b[38;5;241m.\u001b[39msynchronize()  \u001b[38;5;66;03m# Espera GPU terminar\u001b[39;00m\n",
+      "Cell \u001b[0;32mIn[15], line 121\u001b[0m, in \u001b[0;36mNLM_fast_cuda_shared\u001b[0;34m(img, h, f, t)\u001b[0m\n\u001b[1;32m    114\u001b[0m sh_height \u001b[38;5;241m=\u001b[39m threads_per_block[\u001b[38;5;241m1\u001b[39m] \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m2\u001b[39m \u001b[38;5;241m*\u001b[39m (f \u001b[38;5;241m+\u001b[39m t)\n\u001b[1;32m    115\u001b[0m shared_mem_size \u001b[38;5;241m=\u001b[39m sh_width \u001b[38;5;241m*\u001b[39m sh_height \u001b[38;5;241m*\u001b[39m \u001b[38;5;241m4\u001b[39m  \u001b[38;5;66;03m# float32 = 4 bytes\u001b[39;00m\n\u001b[1;32m    117\u001b[0m kernel(\n\u001b[1;32m    118\u001b[0m     grid, threads_per_block,\n\u001b[1;32m    119\u001b[0m     (\n\u001b[1;32m    120\u001b[0m         padded\u001b[38;5;241m.\u001b[39mravel(), output\u001b[38;5;241m.\u001b[39mravel(),\n\u001b[0;32m--> 121\u001b[0m         \u001b[43mcp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mint32\u001b[49m\u001b[43m(\u001b[49m\u001b[43mm\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget\u001b[49m(), cp\u001b[38;5;241m.\u001b[39mint32(n)\u001b[38;5;241m.\u001b[39mget(), cp\u001b[38;5;241m.\u001b[39mint32(f)\u001b[38;5;241m.\u001b[39mget(), cp\u001b[38;5;241m.\u001b[39mint32(t)\u001b[38;5;241m.\u001b[39mget(),\n\u001b[1;32m    122\u001b[0m         cp\u001b[38;5;241m.\u001b[39mfloat32(h)\u001b[38;5;241m.\u001b[39mget(), cp\u001b[38;5;241m.\u001b[39mint32(padded\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m1\u001b[39m])\u001b[38;5;241m.\u001b[39mget()\n\u001b[1;32m    123\u001b[0m     ),\n\u001b[1;32m    124\u001b[0m     shared_mem\u001b[38;5;241m=\u001b[39mshared_mem_size\n\u001b[1;32m    125\u001b[0m )\n\u001b[1;32m    127\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m output\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'numpy.int32' object has no attribute 'get'"
      ]
     }
    ],
@@ -280,14 +277,28 @@
     "img_cpu = np.array(img_downscale, dtype=np.float32)\n",
     "img_gpu = cp.array(img_cpu)\n",
     "\n",
-    "noised_poisson = add_poisson_noise(img_gpu)\n",
+    "m, n = img_gpu.shape\n",
     "\n",
-    "print(type(noised_poisson))\n",
+    "sigma = 10\n",
+    "ruido = cp.random.normal(0, sigma, (m, n))\n",
     "\n",
-    "noised_poisson_cp = cp.array(noised_poisson).get()\n",
+    "# Cria imagem ruidosa\n",
+    "ruidosa = img_gpu + ruido\n",
+    "\n",
+    "# Clipa imagem para intervalo [0, 255]\n",
+    "ruidosa[cp.where(ruidosa > 255)] = 255\n",
+    "ruidosa[cp.where(ruidosa < 0)] = 0\n",
+    "\n",
+    "#noised_poisson = add_poisson_noise(img_gpu)\n",
+    "\n",
+    "#print(type(noised_poisson))\n",
+    "\n",
+    "#noised_poisson_cp = cp.array(noised_poisson).get()\n",
+    "\n",
+    "ruidosa = cp.array(ruidosa).get()\n",
     "\n",
     "\n",
-    "sigma_est = estimate_sigma(noised_poisson_cp)\n",
+    "sigma_est = estimate_sigma(ruidosa)\n",
     "print(f\"Sigma estimado: {sigma_est}\")\n",
     "\n",
     "h_nlm, h_geo = compute_adaptive_q(sigma_est)\n",
@@ -303,7 +314,7 @@
     "\n",
     "# Rodar GPU\n",
     "start_gpu = time.time()\n",
-    "result_gpu = NLM_fast_cuda_shared(noised_poisson_cp, h_nlm, f, t)\n",
+    "result_gpu = NLM_fast_cuda_shared(ruidosa, h_nlm, f, t)\n",
     "result_gpu_cp = cp.asnumpy(result_gpu)\n",
     "cp.cuda.Stream.null.synchronize()  # Espera GPU terminar\n",
     "print(\"Tempo GPU:\", time.time() - start_gpu)\n",
