--- a/wvc/512x512/Cuda_Gaussian_funcionando.ipynb
+++ b/wvc/512x512/Cuda_Gaussian_funcionando.ipynb
@@ -6498,20 +6498,7 @@
    "execution_count": null,
    "id": "d80e9980",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "--- Executando Pipeline 512x512 com mult = 1.55 ---\n",
-      "\n",
-      "Executando GEONLM com h = 136.40 (base 88 * 1.55)\n",
-      "img_n.shape: (528, 528)\n",
-      "M: 520, N: 520\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "vetor2 = load_pickle(\"resultados.pkl\")\n",
     "\n",
@@ -6523,6 +6510,9 @@
     "    img_filtered_nlm = array['img_filtered_nlm']\n",
     "    nlm_h =array['nlm_h']\n",
     "    file_name =array['file_name']\n",
+    "    nlm_psnr =array['nlm_psnr']\n",
+    "    nlm_ssim =array['nlm_ssim']\n",
+    "    nlm_score =array['nlm_score']   \n",
     "\n",
     "    dir_images = (\"/workspace/ProjetoDoutorado/wvc/images\")\n",
     "\n",
@@ -6542,7 +6532,7 @@
     "\n",
     "    print(\"\\n--- Executando Pipeline 512x512 com mult = 1.55 ---\")\n",
     "    mult = 1.55\n",
-    "    img_filtered_gnlm1, h_gnlm1, psnr_gnlm1, ssim_gnlm1, score_gnlm1 = run_geonlm_pipeline(img, nlm_h, img_noisse_gaussian_np, f, t, mult, nn)   \n",
+    "    img_filtered_gnlm, h_gnlm, psnr_gnlm, ssim_gnlm, score_gnlm = run_geonlm_pipeline(img, nlm_h, img_noisse_gaussian_np, f, t, mult, nn)   \n",
     "    end = time.time()\n",
     "    time_geonlm = end - ini\n",
     "\n",
@@ -6565,6 +6555,422 @@
     "    }\n",
     "    array_gnlm_filtereds.append(dict)\n",
     "save_pickle(array_gnlm_filtereds, \"resultados_gnlm.pkl\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "474a6970",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vetor_gnlm = load_pickle(\"resultados_gnlm.pkl\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "5136c61e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PSNR: 31.71 dB\n",
+      "SSIM: 0.9067\n",
+      "PSNR: 35.38 dB\n",
+      "SSIM: 0.9202\n",
+      "PSNR: 33.60 dB\n",
+      "SSIM: 0.8858\n",
+      "PSNR: 32.58 dB\n",
+      "SSIM: 0.9062\n",
+      "PSNR: 28.83 dB\n",
+      "SSIM: 0.8066\n",
+      "PSNR: 30.67 dB\n",
+      "SSIM: 0.8748\n",
+      "PSNR: 35.18 dB\n",
+      "SSIM: 0.8895\n",
+      "PSNR: 35.77 dB\n",
+      "SSIM: 0.9164\n",
+      "PSNR: 30.05 dB\n",
+      "SSIM: 0.8753\n",
+      "PSNR: 35.02 dB\n",
+      "SSIM: 0.9341\n",
+      "PSNR: 34.08 dB\n",
+      "SSIM: 0.9085\n",
+      "PSNR: 32.16 dB\n",
+      "SSIM: 0.8723\n",
+      "PSNR: 32.01 dB\n",
+      "SSIM: 0.9064\n",
+      "PSNR: 33.61 dB\n",
+      "SSIM: 0.9093\n",
+      "PSNR: 35.86 dB\n",
+      "SSIM: 0.9364\n",
+      "PSNR: 34.09 dB\n",
+      "SSIM: 0.8978\n",
+      "PSNR: 33.88 dB\n",
+      "SSIM: 0.8806\n",
+      "PSNR: 27.80 dB\n",
+      "SSIM: 0.8811\n",
+      "PSNR: 31.11 dB\n",
+      "SSIM: 0.8150\n",
+      "PSNR: 30.71 dB\n",
+      "SSIM: 0.9208\n",
+      "PSNR: 34.09 dB\n",
+      "SSIM: 0.9440\n",
+      "PSNR: 31.13 dB\n",
+      "SSIM: 0.9078\n",
+      "PSNR: 33.54 dB\n",
+      "SSIM: 0.8891\n",
+      "PSNR: 29.58 dB\n",
+      "SSIM: 0.8352\n",
+      "PSNR: 25.63 dB\n",
+      "SSIM: 0.8466\n",
+      "PSNR: 29.67 dB\n",
+      "SSIM: 0.8847\n",
+      "PSNR: 19.85 dB\n",
+      "SSIM: 0.7741\n",
+      "PSNR: 31.64 dB\n",
+      "SSIM: 0.8586\n",
+      "PSNR: 30.95 dB\n",
+      "SSIM: 0.8806\n",
+      "PSNR: 31.41 dB\n",
+      "SSIM: 0.9001\n",
+      "PSNR: 26.18 dB\n",
+      "SSIM: 0.7578\n",
+      "PSNR: 31.28 dB\n",
+      "SSIM: 0.8609\n",
+      "PSNR: 34.23 dB\n",
+      "SSIM: 0.8842\n",
+      "PSNR: 34.37 dB\n",
+      "SSIM: 0.9407\n",
+      "PSNR: 33.14 dB\n",
+      "SSIM: 0.8840\n",
+      "PSNR: 27.34 dB\n",
+      "SSIM: 0.7615\n",
+      "PSNR: 26.31 dB\n",
+      "SSIM: 0.7030\n",
+      "PSNR: 29.50 dB\n",
+      "SSIM: 0.8718\n",
+      "PSNR: 34.91 dB\n",
+      "SSIM: 0.9415\n",
+      "PSNR: 29.60 dB\n",
+      "SSIM: 0.9723\n",
+      "PSNR: 36.87 dB\n",
+      "SSIM: 0.9260\n",
+      "PSNR: 31.03 dB\n",
+      "SSIM: 0.8752\n",
+      "PSNR: 30.34 dB\n",
+      "SSIM: 0.8977\n",
+      "PSNR: 32.90 dB\n",
+      "SSIM: 0.8832\n",
+      "PSNR: 34.19 dB\n",
+      "SSIM: 0.9145\n",
+      "PSNR: 35.71 dB\n",
+      "SSIM: 0.9200\n",
+      "PSNR: 32.73 dB\n",
+      "SSIM: 0.8781\n",
+      "PSNR: 36.03 dB\n",
+      "SSIM: 0.9131\n",
+      "PSNR: 28.82 dB\n",
+      "SSIM: 0.8692\n",
+      "PSNR: 33.58 dB\n",
+      "SSIM: 0.9221\n"
+     ]
+    }
+   ],
+   "source": [
+    "vetor2 = load_pickle(\"resultados.pkl\")\n",
+    "from bm3d import bm3d, BM3DProfile\n",
+    "from skimage.restoration import estimate_sigma\n",
+    "from skimage.color import rgb2gray\n",
+    "\n",
+    "array_bm3d_filtereds = []\n",
+    "for array in vetor2:\n",
+    "\n",
+    "    img_noisse_gaussian_np =array['img_noisse_gaussian_np']\n",
+    "    img_filtered_nlm = array['img_filtered_nlm']\n",
+    "    nlm_h =array['nlm_h']\n",
+    "    file_name =array['file_name']\n",
+    "    nlm_psnr =array['nlm_psnr']\n",
+    "    nlm_ssim =array['nlm_ssim']\n",
+    "    nlm_score =array['nlm_score']   \n",
+    "\n",
+    "    dir_images = (\"/workspace/ProjetoDoutorado/wvc/images\")\n",
+    "\n",
+    "\n",
+    "    img = skimage.io.imread(f'{dir_images}/{file_name}')\n",
+    "    img = img[0, :, :] if len(img.shape) > 2 else img\n",
+    "    if len(img.shape) > 2:\n",
+    "        img = skimage.color.rgb2gray(img)\n",
+    "        img = 255 * img\n",
+    "    # Remove frames extras, se existirem (e.g. GIF com shape (1, H, W) ou (N, H, W, 3))\n",
+    "    if img.ndim == 4:\n",
+    "        img = img[0]\n",
+    "    elif img.ndim == 3 and img.shape[2] != 3:\n",
+    "        img = np.squeeze(img)\n",
+    "\n",
+    "    # Converte para escala de cinza, se necessário\n",
+    "    if img.ndim == 3 and img.shape[2] == 3:\n",
+    "        img_gray = rgb2gray(img)  # retorna float64 em [0, 1]\n",
+    "    else:\n",
+    "        img_gray = img.astype(np.float32) / 255.0  # já está em cinza\n",
+    "     # Agora está garantidamente em escala de cinza float [0,1]\n",
+    "    img_gray = np.clip(img_gray * 255, 0, 255).astype(np.uint8)\n",
+    "    \n",
+    "     # 1. Normaliza a imagem ruidosa para intervalo [0, 1]\n",
+    "    ruidosa_normalizada = img_noisse_gaussian_np.astype(np.float32) / 255.0\n",
+    "\n",
+    "    sigma_est = estimate_sigma(ruidosa_normalizada, channel_axis=None)\n",
+    "\n",
+    "    # 3. Define o perfil padrão do BM3D\n",
+    "    perfil_bm3d = BM3DProfile()\n",
+    "\n",
+    "    # 4. Aplica o BM3D com os argumentos definidos\n",
+    "    denoised = bm3d(\n",
+    "        ruidosa_normalizada,\n",
+    "        sigma_psd=sigma_est,\n",
+    "        profile=perfil_bm3d\n",
+    "    )\n",
+    "    denoised_sq = np.squeeze(denoised)\n",
+    "\n",
+    "    \n",
+    "    psnr = peak_signal_noise_ratio(img_gray, (denoised * 255).astype(np.uint8))\n",
+    "    ssim = structural_similarity(img_gray, (denoised * 255).astype(np.uint8))\n",
+    "    score = 0.5 * psnr + 0.5 * (ssim * 100)\n",
+    "\n",
+    "    print(f\"PSNR: {psnr:.2f} dB\")\n",
+    "    print(f\"SSIM: {ssim:.4f}\")\n",
+    "\n",
+    "    dict = {\n",
+    "            'ssim': ssim,\n",
+    "            'psnr':psnr,        \n",
+    "            'image': file_name,\n",
+    "            'score':score,\n",
+    "        }\n",
+    "    array_bm3d_filtereds.append(dict)\n",
+    "save_pickle(array_bm3d_filtereds, \"resultados_bm3d.pkl\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "24cec011",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'ssim': np.float64(0.9066909364029847),\n",
+       "  'psnr': np.float64(31.71406440584256),\n",
+       "  'image': '36.gif',\n",
+       "  'score': np.float64(61.19157902307052)},\n",
+       " {'ssim': np.float64(0.9201542065312889),\n",
+       "  'psnr': np.float64(35.382823510889246),\n",
+       "  'image': '39.gif',\n",
+       "  'score': np.float64(63.69912208200907)},\n",
+       " {'ssim': np.float64(0.8857828794990716),\n",
+       "  'psnr': np.float64(33.60087101047691),\n",
+       "  'image': '4.gif',\n",
+       "  'score': np.float64(61.089579480192036)},\n",
+       " {'ssim': np.float64(0.9062007760857367),\n",
+       "  'psnr': np.float64(32.57820116841103),\n",
+       "  'image': '3.gif',\n",
+       "  'score': np.float64(61.59913938849235)},\n",
+       " {'ssim': np.float64(0.8066351929812104),\n",
+       "  'psnr': np.float64(28.82808681580615),\n",
+       "  'image': '32.gif',\n",
+       "  'score': np.float64(54.745803056963595)},\n",
+       " {'ssim': np.float64(0.874751924124374),\n",
+       "  'psnr': np.float64(30.67258919706006),\n",
+       "  'image': '7.gif',\n",
+       "  'score': np.float64(59.07389080474873)},\n",
+       " {'ssim': np.float64(0.8895106116442547),\n",
+       "  'psnr': np.float64(35.183529925409466),\n",
+       "  'image': '40.gif',\n",
+       "  'score': np.float64(62.06729554491747)},\n",
+       " {'ssim': np.float64(0.9163739599688093),\n",
+       "  'psnr': np.float64(35.76682323096875),\n",
+       "  'image': '0.gif',\n",
+       "  'score': np.float64(63.70210961392483)},\n",
+       " {'ssim': np.float64(0.8753054963712716),\n",
+       "  'psnr': np.float64(30.053997841823797),\n",
+       "  'image': '15.gif',\n",
+       "  'score': np.float64(58.79227373947548)},\n",
+       " {'ssim': np.float64(0.9340818244742994),\n",
+       "  'psnr': np.float64(35.01899611790492),\n",
+       "  'image': '48.gif',\n",
+       "  'score': np.float64(64.21358928266743)},\n",
+       " {'ssim': np.float64(0.9085461631142718),\n",
+       "  'psnr': np.float64(34.08005941292067),\n",
+       "  'image': '38.gif',\n",
+       "  'score': np.float64(62.46733786217392)},\n",
+       " {'ssim': np.float64(0.8723358113284708),\n",
+       "  'psnr': np.float64(32.163566613358995),\n",
+       "  'image': '12.gif',\n",
+       "  'score': np.float64(59.69857387310304)},\n",
+       " {'ssim': np.float64(0.906432741665462),\n",
+       "  'psnr': np.float64(32.00957424772837),\n",
+       "  'image': '19.gif',\n",
+       "  'score': np.float64(61.32642420713728)},\n",
+       " {'ssim': np.float64(0.9092977158779214),\n",
+       "  'psnr': np.float64(33.608369746186725),\n",
+       "  'image': '41.gif',\n",
+       "  'score': np.float64(62.269070666989435)},\n",
+       " {'ssim': np.float64(0.9363652332587753),\n",
+       "  'psnr': np.float64(35.85646063616114),\n",
+       "  'image': '10.gif',\n",
+       "  'score': np.float64(64.74649198101933)},\n",
+       " {'ssim': np.float64(0.8978336508649443),\n",
+       "  'psnr': np.float64(34.08797200755144),\n",
+       "  'image': '24.gif',\n",
+       "  'score': np.float64(61.935668547022935)},\n",
+       " {'ssim': np.float64(0.880627287070446),\n",
+       "  'psnr': np.float64(33.87727716540469),\n",
+       "  'image': '28.gif',\n",
+       "  'score': np.float64(60.970002936224645)},\n",
+       " {'ssim': np.float64(0.8811438626110002),\n",
+       "  'psnr': np.float64(27.795713549564258),\n",
+       "  'image': '14.gif',\n",
+       "  'score': np.float64(57.95504990533214)},\n",
+       " {'ssim': np.float64(0.8150106988229315),\n",
+       "  'psnr': np.float64(31.113489167708707),\n",
+       "  'image': '37.gif',\n",
+       "  'score': np.float64(56.30727952500093)},\n",
+       " {'ssim': np.float64(0.9207646345127043),\n",
+       "  'psnr': np.float64(30.71077294737965),\n",
+       "  'image': '9.gif',\n",
+       "  'score': np.float64(61.39361819932504)},\n",
+       " {'ssim': np.float64(0.9440258780627117),\n",
+       "  'psnr': np.float64(34.09118435154015),\n",
+       "  'image': '43.gif',\n",
+       "  'score': np.float64(64.24688607890566)},\n",
+       " {'ssim': np.float64(0.9077860239189173),\n",
+       "  'psnr': np.float64(31.126121044300703),\n",
+       "  'image': '6.gif',\n",
+       "  'score': np.float64(60.95236171809621)},\n",
+       " {'ssim': np.float64(0.8890684814129934),\n",
+       "  'psnr': np.float64(33.53810946686747),\n",
+       "  'image': '2.gif',\n",
+       "  'score': np.float64(61.22247880408341)},\n",
+       " {'ssim': np.float64(0.8351911164922109),\n",
+       "  'psnr': np.float64(29.576896428544277),\n",
+       "  'image': '22.gif',\n",
+       "  'score': np.float64(56.54800403888268)},\n",
+       " {'ssim': np.float64(0.8466149460497187),\n",
+       "  'psnr': np.float64(25.62603838916274),\n",
+       "  'image': '18.gif',\n",
+       "  'score': np.float64(55.143766497067304)},\n",
+       " {'ssim': np.float64(0.8846516997653736),\n",
+       "  'psnr': np.float64(29.669659410805025),\n",
+       "  'image': '17.gif',\n",
+       "  'score': np.float64(59.067414693671196)},\n",
+       " {'ssim': np.float64(0.7740836564250602),\n",
+       "  'psnr': np.float64(19.85163892679878),\n",
+       "  'image': '44.gif',\n",
+       "  'score': np.float64(48.6300022846524)},\n",
+       " {'ssim': np.float64(0.8586076255617832),\n",
+       "  'psnr': np.float64(31.637525376242706),\n",
+       "  'image': '33.gif',\n",
+       "  'score': np.float64(58.74914396621051)},\n",
+       " {'ssim': np.float64(0.8806439673530881),\n",
+       "  'psnr': np.float64(30.95321090563361),\n",
+       "  'image': '34.gif',\n",
+       "  'score': np.float64(59.508803820471215)},\n",
+       " {'ssim': np.float64(0.900140739012966),\n",
+       "  'psnr': np.float64(31.411287755724246),\n",
+       "  'image': '11.gif',\n",
+       "  'score': np.float64(60.71268082851042)},\n",
+       " {'ssim': np.float64(0.7577730163648407),\n",
+       "  'psnr': np.float64(26.18153785883004),\n",
+       "  'image': '31.gif',\n",
+       "  'score': np.float64(50.979419747657055)},\n",
+       " {'ssim': np.float64(0.8608530752565563),\n",
+       "  'psnr': np.float64(31.281207428935215),\n",
+       "  'image': '30.gif',\n",
+       "  'score': np.float64(58.68325747729543)},\n",
+       " {'ssim': np.float64(0.8841645167130755),\n",
+       "  'psnr': np.float64(34.23473074139265),\n",
+       "  'image': '26.gif',\n",
+       "  'score': np.float64(61.325591206350104)},\n",
+       " {'ssim': np.float64(0.9406953780430559),\n",
+       "  'psnr': np.float64(34.374989968688055),\n",
+       "  'image': '13.gif',\n",
+       "  'score': np.float64(64.22226388649682)},\n",
+       " {'ssim': np.float64(0.8839799657554264),\n",
+       "  'psnr': np.float64(33.14017159879648),\n",
+       "  'image': '35.gif',\n",
+       "  'score': np.float64(60.76908408716956)},\n",
+       " {'ssim': np.float64(0.7614667861566256),\n",
+       "  'psnr': np.float64(27.34297347607846),\n",
+       "  'image': '29.gif',\n",
+       "  'score': np.float64(51.744826045870504)},\n",
+       " {'ssim': np.float64(0.7029859895319971),\n",
+       "  'psnr': np.float64(26.308685199931567),\n",
+       "  'image': '16.gif',\n",
+       "  'score': np.float64(48.30364207656564)},\n",
+       " {'ssim': np.float64(0.8717640287055815),\n",
+       "  'psnr': np.float64(29.499794647458298),\n",
+       "  'image': '47.gif',\n",
+       "  'score': np.float64(58.338098759008226)},\n",
+       " {'ssim': np.float64(0.9415283019154336),\n",
+       "  'psnr': np.float64(34.907809995863055),\n",
+       "  'image': '1.gif',\n",
+       "  'score': np.float64(64.53032009370321)},\n",
+       " {'ssim': np.float64(0.9723377063460051),\n",
+       "  'psnr': np.float64(29.598492142219122),\n",
+       "  'image': '49.gif',\n",
+       "  'score': np.float64(63.41613138840982)},\n",
+       " {'ssim': np.float64(0.9260240190348149),\n",
+       "  'psnr': np.float64(36.874837494260014),\n",
+       "  'image': '23.gif',\n",
+       "  'score': np.float64(64.73861969887075)},\n",
+       " {'ssim': np.float64(0.8751872398316686),\n",
+       "  'psnr': np.float64(31.033721710059904),\n",
+       "  'image': '20.gif',\n",
+       "  'score': np.float64(59.27622284661338)},\n",
+       " {'ssim': np.float64(0.8976649754919147),\n",
+       "  'psnr': np.float64(30.34351499059515),\n",
+       "  'image': '46.gif',\n",
+       "  'score': np.float64(60.05500626989331)},\n",
+       " {'ssim': np.float64(0.883218753847132),\n",
+       "  'psnr': np.float64(32.89506969571869),\n",
+       "  'image': '21.gif',\n",
+       "  'score': np.float64(60.60847254021594)},\n",
+       " {'ssim': np.float64(0.9144712362269253),\n",
+       "  'psnr': np.float64(34.19348619109737),\n",
+       "  'image': '5.gif',\n",
+       "  'score': np.float64(62.82030490689495)},\n",
+       " {'ssim': np.float64(0.9199583454962251),\n",
+       "  'psnr': np.float64(35.711229732471544),\n",
+       "  'image': '27.gif',\n",
+       "  'score': np.float64(63.853532141047026)},\n",
+       " {'ssim': np.float64(0.8781161335192562),\n",
+       "  'psnr': np.float64(32.728572144798584),\n",
+       "  'image': '45.gif',\n",
+       "  'score': np.float64(60.2700927483621)},\n",
+       " {'ssim': np.float64(0.913079001729548),\n",
+       "  'psnr': np.float64(36.026421340283434),\n",
+       "  'image': '25.gif',\n",
+       "  'score': np.float64(63.66716075661912)},\n",
+       " {'ssim': np.float64(0.8691628368627362),\n",
+       "  'psnr': np.float64(28.822235010538435),\n",
+       "  'image': '42.gif',\n",
+       "  'score': np.float64(57.869259348406025)},\n",
+       " {'ssim': np.float64(0.9220518140670811),\n",
+       "  'psnr': np.float64(33.5784208159805),\n",
+       "  'image': '8.gif',\n",
+       "  'score': np.float64(62.89180111134431)}]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "array_bm3d_filtereds"
    ]
   }
  ],
