--- a/wvc/512x512/NLM_Median.ipynb
+++ b/wvc/512x512/NLM_Median.ipynb
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "851715f6",
    "metadata": {},
    "outputs": [],
@@ -458,22 +458,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "7e6d616c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'read_directories' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 33\u001b[0m\n\u001b[1;32m     30\u001b[0m dir_images \u001b[38;5;241m=\u001b[39m (\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m/workspace/ProjetoDoutorado/wvc/images\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     31\u001b[0m \u001b[38;5;66;03m#dir_out_nlm = f'{root_dir}/wvc/512x512/out_put_Median'\u001b[39;00m\n\u001b[0;32m---> 33\u001b[0m array_dir \u001b[38;5;241m=\u001b[39m \u001b[43mread_directories\u001b[49m(dir_images)\n\u001b[1;32m     35\u001b[0m psnrs_nlm \u001b[38;5;241m=\u001b[39m []\n\u001b[1;32m     36\u001b[0m ssims_nlm \u001b[38;5;241m=\u001b[39m []\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'read_directories' is not defined"
+     ]
+    }
+   ],
    "source": [
     "from pathlib import Path\n",
     "from skimage.filters import median\n",
     "from skimage.morphology import disk\n",
+    "import sys\n",
+    "import sys\n",
+    "import warnings\n",
+    "import time\n",
+    "import skimage\n",
+    "import statistics\n",
+    "import networkx as nx\n",
+    "import matplotlib.pyplot as plt\n",
+    "import skimage.io\n",
+    "import skimage.measure\n",
+    "import numpy as np\n",
+    "import sklearn.neighbors as sknn\n",
+    "from scipy.sparse.csgraph import dijkstra\n",
+    "from numpy.matlib import repmat\n",
+    "from scipy.linalg import eigh\n",
+    "from numpy.linalg import inv\n",
+    "from numpy.linalg import cond\n",
+    "from skimage.metrics import peak_signal_noise_ratio\n",
+    "from skimage.metrics import structural_similarity\n",
     "\n",
-    "sys.path.insert(0, r\"c:\\Users\\adria\\Documents\\Doutorado\\ProjetoDoutorado\")\n",
-    "root_dir = Path(r\"c:\\Users\\adria\\Documents\\Doutorado\\ProjetoDoutorado\")\n",
+    "#sys.path.insert(0, r\"c:\\Users\\adria\\Documents\\Doutorado\\ProjetoDoutorado\")\n",
+    "#root_dir = Path(r\"c:\\Users\\adria\\Documents\\Doutorado\\ProjetoDoutorado\")\n",
     "\n",
     "\n",
     "\n",
-    "dir_images = f'{root_dir}/wvc/images'\n",
-    "dir_out_nlm = f'{root_dir}/wvc/512x512/out_put_Median'\n",
+    "#dir_images = f'{root_dir}/wvc/images'\n",
+    "dir_images = (\"/workspace/ProjetoDoutorado/wvc/images\")\n",
+    "#dir_out_nlm = f'{root_dir}/wvc/512x512/out_put_Median'\n",
     "\n",
     "array_dir = read_directories(dir_images)\n",
     "\n",
@@ -535,7 +567,7 @@
     "    print('***********************************')\n",
     "    print()\n",
     "    inicio = time.time()\n",
-    "    median_filter = median(img, footprint=disk(3))\n",
+    "    median_filter = median(ruidosa, footprint=disk(3))\n",
     "    \n",
     "    fim = time.time()    \n",
     "    # Calcula PSNR\n",
@@ -550,7 +582,7 @@
     "    print()\n",
     "    time_median = fim - inicio\n",
     "    # Salva arquivo\n",
-    "    skimage.io.imsave(f'{dir_out_nlm}/{file_name}', median_filter.astype(np.uint8))\n",
+    "    #skimage.io.imsave(f'{dir_out_nlm}/{file_name}', median_filter.astype(np.uint8))\n",
     "\n",
     "    \n",
     "\n",
@@ -608,7 +640,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -622,7 +654,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
