--- a/Gaussian_Experiments/Low_noise/256x256/Cuda_Gaussian_256.ipynb
+++ b/Gaussian_Experiments/Low_noise/256x256/Cuda_Gaussian_256.ipynb
@@ -8182,7 +8182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "17eed735",
    "metadata": {},
    "outputs": [],
@@ -8986,6 +8986,134 @@
    ],
    "source": [
     "salvar_resultados_em_xlsx(array_gnlm_bm3d_256_filtereds, 'saida_gnlm_bm3d_256_filtereds.xlsx')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "c52453cd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "file_name: 36.gif\n",
+      "estimated_sigma_gaussian_np: 7.162373331447949\n",
+      "file_name: 39.gif\n",
+      "estimated_sigma_gaussian_np: 5.681702527194131\n",
+      "file_name: 4.gif\n",
+      "estimated_sigma_gaussian_np: 6.478422924372114\n",
+      "file_name: 3.gif\n",
+      "estimated_sigma_gaussian_np: 6.127352329159114\n",
+      "file_name: 32.gif\n",
+      "estimated_sigma_gaussian_np: 7.516170670719927\n",
+      "file_name: 7.gif\n",
+      "estimated_sigma_gaussian_np: 8.564629565431131\n",
+      "file_name: 40.gif\n",
+      "estimated_sigma_gaussian_np: 5.848613975331236\n",
+      "file_name: 0.gif\n",
+      "estimated_sigma_gaussian_np: 5.845332621286706\n",
+      "file_name: 15.gif\n",
+      "estimated_sigma_gaussian_np: 9.389460099314618\n",
+      "file_name: 48.gif\n",
+      "estimated_sigma_gaussian_np: 6.0874267728379206\n",
+      "file_name: 38.gif\n",
+      "estimated_sigma_gaussian_np: 6.400022493298051\n",
+      "file_name: 12.gif\n",
+      "estimated_sigma_gaussian_np: 6.60704083295239\n",
+      "file_name: 19.gif\n",
+      "estimated_sigma_gaussian_np: 7.043852223139993\n",
+      "file_name: 41.gif\n",
+      "estimated_sigma_gaussian_np: 6.184231489130393\n",
+      "file_name: 10.gif\n",
+      "estimated_sigma_gaussian_np: 6.0165575848181225\n",
+      "file_name: 24.gif\n",
+      "estimated_sigma_gaussian_np: 6.187267174634478\n",
+      "file_name: 28.gif\n",
+      "estimated_sigma_gaussian_np: 5.72465811334078\n",
+      "file_name: 14.gif\n",
+      "estimated_sigma_gaussian_np: 12.020514317650962\n",
+      "file_name: 37.gif\n",
+      "estimated_sigma_gaussian_np: 7.842497671931303\n",
+      "file_name: 9.gif\n",
+      "estimated_sigma_gaussian_np: 7.4253673364125925\n",
+      "file_name: 43.gif\n",
+      "estimated_sigma_gaussian_np: 6.438103591426381\n",
+      "file_name: 6.gif\n",
+      "estimated_sigma_gaussian_np: 7.003262831539727\n",
+      "file_name: 2.gif\n",
+      "estimated_sigma_gaussian_np: 6.071744989919519\n",
+      "file_name: 22.gif\n",
+      "estimated_sigma_gaussian_np: 7.27636989685275\n",
+      "file_name: 18.gif\n",
+      "estimated_sigma_gaussian_np: 10.05862373461508\n",
+      "file_name: 17.gif\n",
+      "estimated_sigma_gaussian_np: 9.207584785965073\n",
+      "file_name: 44.gif\n",
+      "estimated_sigma_gaussian_np: 20.028385446612212\n",
+      "file_name: 33.gif\n",
+      "estimated_sigma_gaussian_np: 6.895506600542135\n",
+      "file_name: 34.gif\n",
+      "estimated_sigma_gaussian_np: 8.048254795251388\n",
+      "file_name: 11.gif\n",
+      "estimated_sigma_gaussian_np: 7.2246437670722665\n",
+      "file_name: 31.gif\n",
+      "estimated_sigma_gaussian_np: 11.910102745537081\n",
+      "file_name: 30.gif\n",
+      "estimated_sigma_gaussian_np: 7.25835514649991\n",
+      "file_name: 26.gif\n",
+      "estimated_sigma_gaussian_np: 5.810372750801724\n",
+      "file_name: 13.gif\n",
+      "estimated_sigma_gaussian_np: 6.4945889747731185\n",
+      "file_name: 35.gif\n",
+      "estimated_sigma_gaussian_np: 6.312453500206642\n",
+      "file_name: 29.gif\n",
+      "estimated_sigma_gaussian_np: 9.518941912805465\n",
+      "file_name: 16.gif\n",
+      "estimated_sigma_gaussian_np: 9.520200301300404\n",
+      "file_name: 47.gif\n",
+      "estimated_sigma_gaussian_np: 10.116496173145567\n",
+      "file_name: 1.gif\n",
+      "estimated_sigma_gaussian_np: 7.434262304976262\n",
+      "file_name: 49.gif\n",
+      "estimated_sigma_gaussian_np: 8.628074968290612\n",
+      "file_name: 23.gif\n",
+      "estimated_sigma_gaussian_np: 5.600841522436562\n",
+      "file_name: 20.gif\n",
+      "estimated_sigma_gaussian_np: 8.643281674204182\n",
+      "file_name: 46.gif\n",
+      "estimated_sigma_gaussian_np: 8.599698307729719\n",
+      "file_name: 21.gif\n",
+      "estimated_sigma_gaussian_np: 6.569820811895317\n",
+      "file_name: 5.gif\n",
+      "estimated_sigma_gaussian_np: 6.24382749572305\n",
+      "file_name: 27.gif\n",
+      "estimated_sigma_gaussian_np: 5.5254619307101835\n",
+      "file_name: 45.gif\n",
+      "estimated_sigma_gaussian_np: 6.667349455052293\n",
+      "file_name: 25.gif\n",
+      "estimated_sigma_gaussian_np: 5.542193548974082\n",
+      "file_name: 42.gif\n",
+      "estimated_sigma_gaussian_np: 6.439537305958817\n",
+      "file_name: 8.gif\n",
+      "estimated_sigma_gaussian_np: 6.565765690318365\n"
+     ]
+    }
+   ],
+   "source": [
+    "from skimage.restoration import estimate_sigma\n",
+    "\n",
+    "vetor = load_pickle(\"resultados_gaussian_256.pkl\")\n",
+    "\n",
+    "for array in vetor:\n",
+    "\n",
+    "    img_noisse_gaussian_np =array['img_noisse_gaussian_np']\n",
+    "    file_name =array['file_name']\n",
+    "    \n",
+    "    estimated_sigma_gaussian_np = estimate_sigma(img_noisse_gaussian_np)\n",
+    "    print(f'file_name: {file_name}')\n",
+    "    print(f'estimated_sigma_gaussian_np: {estimated_sigma_gaussian_np}')"
    ]
   }
  ],
